caption moved out.

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -489,9 +489,9 @@ reasoning axioms cannot only be expressed by OWL 2.
   
   \begin{table}
   \begin{center}
-    \scriptsize
-  \sffamily
-  \vspace{0.3cm}
+%    \scriptsize
+%  \sffamily
+%  \vspace{0.3cm}
 \begin{tabular}{l|c|c|c|c|c|c} 
   \hline
 
@@ -501,7 +501,7 @@ reasoning axioms cannot only be expressed by OWL 2.
 \ms{Expr-R} (4) & 1 & 0 & 0 & 2 & 2 & 4 \\ 
 \ms{Expr-C} (41) & 6 & 18(4) & 7(4) & 8 & 12 & 40(1)\\
 \end{tabular}
-\caption{\scriptsize Evaluation on Expressivity Classes}
+
 
 \label{table:evaluation}
 \end{center}
@@ -510,7 +510,7 @@ reasoning axioms cannot only be expressed by OWL 2.
 %\tb{ToDo Thomas: refer to table}
 
 
-In Table \ref{table:evaluation}, the total amount of constraints/axioms is shown by numbers in round brackets in the first column.
+In the table above, the total amount of constraints/axioms is shown by numbers in round brackets in the first column.
 Numbers in round brackets in the other columns indicate the number of constraints/axioms which may be expressed by that particular constraint language - either by limitations, workarounds, or extensions.  
 
 OWL 2 DL reasoning axioms are additional reasoning axioms which cannot be expressed by OWL 2 QL. 
