normal table size

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -547,7 +547,7 @@ According to our evaluation of requirements to formulate RDF constraints, we ide
 \end{itemize}
 
 The complexity class \ms{C-R} encompasses all axioms for which reasoning can be executed but cannot be expressed by OWL 2.  
-Table \textcolor{red}{XXX} gives an overview of the computational complexity for RDF validation when reasoning is performed and when reasoning is not performed. 
+Next table gives an overview of the computational complexity for RDF validation when reasoning is performed and when reasoning is not performed. 
 \begin{center}
 \begin{complexity}
 \ms{C-C} & \textsc{Pspace}-Complete \\
