--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -163,8 +163,8 @@
 
 %
 %
-\title{RDF Validation}
-\subtitle{Classification of Constraint Languages According to Expressivity, Complexity, and User-Friendliness}
+\title{Recommending RDF Constraint Languages According to Expressivity, Complexity, and User-Friendliness}
+\subtitle{}
 %
 \titlerunning{XXXXX}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
@@ -222,6 +222,7 @@ If validators propose multiple constraint languages for a particular validation 
 	%\item Classification of RDF Validation Constraint Languages According to Expressivity, Complexity, and User-Friendliness 
 	%\item RDF Validation - Classification of Constraint Languages According to Expressivity, Complexity, and User-Friendliness 
 	%\item RDF Validation - Effects on Complexity with and without OWL 2 Reasoning
+	% RDF Validation - Proposing / Comparing / Recommendation / Recommending Constraint Languages According to Expressivity, Complexity, and User-Friendliness
 %\end{itemize}
 
 \section{Introduction}
@@ -412,7 +413,10 @@ This paper serves to answer the two \textbf{research questions}:
 The \textbf{main contributions} of this paper are:
 \begin{itemize}
   %\item We explain why OWL can be used as constraint language
+	\item We show that OWL 2 can be used as a high-level, very expressive, intuitive, and concise constraint language
 	\item We explain why reasoning is beneficial for validation and how reasoning interacts with validation
+	\item We describe how to recommend constraint languages according to expressivity, complexity, and user-friendliness
+	\item We explain how to get to lower expressivity and complexity classes for particular validation scenarios 
   %\item We investigate the effects on complexity expressing each constraint
 	%\item We show that OWL 2 QL together with additional constraint languages completely satisfy all RDF validation requirements.
 	%\item We evaluated to which extend the five possible standard constraint languages fulfill each requirement.
